after image prcessed new image info added to telemetry data feature added
